Replaced sky addon with envirionment addon.